--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width">
 
-    <title>378 Website Starter</title>
+    <title>Anthony Raffini</title>
 
     <link rel="stylesheet" href="http://necolas.github.io/normalize.css/3.0.2/normalize.css">  
     <link rel="stylesheet" href="css/styles.css">	
